--- a/style.css
+++ b/style.css
@@ -142,9 +142,7 @@ color: #212121;
     max-width: 1600px;
     /* background: #2F303A; */
     text-align: center;
-    /* background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4))  url('./images/hero/Img.jpg'); */
-    background-image:  url('./images/hero/Img.jpg');
-    
+    background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),  url('./images/hero/Img.jpg');
     background-size: cover;
 }
 
@@ -359,8 +357,8 @@ fill: #2196F3;
     justify-content: center;
     gap: 30px;
 }
-.customers-social-list-item{
-}
+.customers-social-list-item{}
+
 
 
 .customers-social-list-link{
@@ -370,14 +368,21 @@ fill: #2196F3;
     width: 170px;
     height: 92px;
     background-color: #FFFFFF;
-    /* border-color: 1px green; */
-
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
 }
 
 
 
 
 /* footer */
+
+.footer-divs{
+    display: flex;
+    align-items: baseline;
+
+}
+
 .footer-address{
     font-weight: 400;
     font-size: 14px;
@@ -392,6 +397,7 @@ fill: #2196F3;
 .footer{
     padding: 60px 0;
     background: #2F303A;
+
 }
 .footer-mail{
     font-weight: 400;
@@ -425,7 +431,7 @@ fill: #2196F3;
     margin-bottom: 9px;
 }
 .footer-social{
-    
+
 }
 
 .footer-social-p{
